--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,8 @@
 :root{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     --font-family: 'Poppins', sans-serif;
     --text: 400 1rem/1.5 var(--font-family);
     --text-sm: 400 0.875rem/1.4 var(--font-family);
@@ -14,6 +18,10 @@
     --stroke-default: #d3d3d1;
     --stroke-highlight: #f3541c;
     --semantic-error: #dc2626;
-    
 
+
+}
+
+body{
+    overflow: hidden;
 }
