--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,5 @@
 :root{
-    margin: 0;
+    margin: 0px;
     padding: 0;
     box-sizing: border-box;
 
@@ -23,6 +23,8 @@
 }
 
 body{
+    margin: 0px;
+    padding: 0;
     overflow: hidden;
 
     font: var(--text);
