--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,7 @@
     --stroke-default: #d3d3d1;
     --stroke-highlight: #f3541c;
     --semantic-error: #dc2626;
+    --surface-disabled: #e7e5e4;
 
 
 }
@@ -36,4 +37,16 @@ h1,h2{
 img{
     max-width: 100%;
     height: auto;
+}
+
+.flex{
+    display: flex;
+}
+
+.flex-1{
+    flex: 1;
+}
+
+.flex-2{
+    flex: 2;
 }
